 -The program's UI has really slimmed down, so the default size has been reduced.
 -Added Lumen and Tenebrae, the DoM Light and Darkness rings, to the default rings list.
 -Fixed a stupid logic error that caused all moves after Elemental Fury to be invalid.
 -Updated duelist list, or rather, redid it. Started from scratch and added all duelists since January. 108 duelists.
v0.5.2:
 -Fixed a bug that crashed Arbiter when the edit dialog was opened.
 -Fixed a bug that crashed Arbiter when new duelists were automatically added.
v0.5.1:
 -Added (null) moves to each sport, even Swords. It causes the other move to automatically score the most it can. This is mostly going to be used in Fists and Magic, where the policy is to use a null move like that in case there is severe difficulty with getting a player's move. In DoS, the policy is to Disengage. But it's still there anyways in case it's ever needed for any reason.
 -Fixed the cosmetic bug in the duel tool that occcured at the end of a duel; the round scores from the round before the one that is supposed to be used were displayed in the score boxes. This is now fixed.
v0.5:
 -Duelist roster update. We're now at 241 duelists. May need to clean out stagnant duelists soon.
 -Various code refactoring.
 -The duel widget has been rearranged a bit.
 -The normal duel tool now uses the same combobox text coloring that the brawler does.
 -Vertical tabs, like in the flash chat tool.
 -Tabs can now be reordered, via drag and drop.
 -The Fight Night checkbox is now in the menubar.
 -The Fight Night checkbox will be disabled when the first duel is started. This is so that the internal lists of duels don't get mixed up.
 -The completion for the two duelist comboboxes is now case-insensitive and matches any duelist whose name contains what is typed in the combobox. For example, typing "snor" will now return "giantsnoringbear/Snorlax" as a candidate.